Changed some info in index and style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <h2>Responsive Testimonials</h2>
 <p>Resize the browser window to see the effect.</p>
 
+<h1>Very cool staff is GIT</h1>
+
 <div class="container">
   <img src="/w3images/bandmember.jpg" alt="Avatar" style="width:90px">
   <p><span>Chris Fox.</span> CEO at Mighty Schools.</p>
