--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>Resize the browser window to see the effect.</p>
 
 <h1>Very cool staff is GIT</h1>
-
+HOHOHOHOHOH
 <div class="container">
   <img src="/w3images/bandmember.jpg" alt="Avatar" style="width:90px">
   <p><span>Chris Fox.</span> CEO at Mighty Schools.</p>
